New Releases + Api fetching

--- a/src/assets/icons/muvi/config.json
+++ b/src/assets/icons/muvi/config.json
@@ -89,6 +89,62 @@
       "search": [
         "show"
       ]
+    },
+    {
+      "uid": "c04fe434b5e1bb86c9bc2047908a6604",
+      "css": "chevron-right",
+      "code": 59398,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M298.5 881.1H298.5A30.8 30.8 0 0 1 298.5 837.5L620.2 515.8A24.9 24.9 0 0 0 620.2 480.6L302 162.5A30.8 30.8 0 0 1 302 118.9H302A30.8 30.8 0 0 1 345.5 118.9L700.5 473.8A34.6 34.6 0 0 1 700.5 522.6L342 881.1A30.8 30.8 0 0 1 298.5 881.1Z",
+        "width": 1000
+      },
+      "search": [
+        "chevron-right"
+      ]
+    },
+    {
+      "uid": "c0267079b971d0206ef6c6435931af06",
+      "css": "chevron-left",
+      "code": 59399,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M701.5 881.1H701.5A30.8 30.8 0 0 0 701.5 837.5L379.8 515.8A24.9 24.9 0 0 1 379.8 480.6L698 162.5A30.8 30.8 0 0 0 698 118.9H698A30.8 30.8 0 0 0 654.5 118.9L299.5 473.8A34.6 34.6 0 0 0 299.5 522.6L658 881.1A30.8 30.8 0 0 0 701.5 881.1Z",
+        "width": 1000
+      },
+      "search": [
+        "chevron-left"
+      ]
+    },
+    {
+      "uid": "bf0fee4b6870891741910091f6deafc1",
+      "css": "star-contain",
+      "code": 59402,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M873.4 461.5A42.2 42.2 0 0 0 850 389.5L656.3 362A42.2 42.2 0 0 1 624.5 338.5L538.5 163.4A42.2 42.2 0 0 0 462.8 163.4L375.5 338.5A42.2 42.2 0 0 1 343.7 361.5L150 390.2A42.2 42.2 0 0 0 126.6 461.5L266.8 598.2A42.2 42.2 0 0 1 278.9 635.5L246.2 829.1A42.3 42.3 0 0 0 287.8 878.5 41.8 41.8 0 0 0 307.7 873.5L480.9 782.5A41.8 41.8 0 0 1 520.3 782.5L692.3 873.5A41.8 41.8 0 0 0 711.8 878.5 42.3 42.3 0 0 0 753.8 829.1L721.1 636.2A42.2 42.2 0 0 1 733.2 598.8Z",
+        "width": 1000
+      },
+      "search": [
+        "star-contain"
+      ]
+    },
+    {
+      "uid": "95aba7683200e72d7fccf459bd0a6164",
+      "css": "star-outline",
+      "code": 59401,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 225.7L569.2 366.2A104 104 0 0 0 647.4 422.9L802.3 446.2 690.3 555.4A103.7 103.7 0 0 0 660.5 647.7L686.9 801.5 548.5 728.8A103.2 103.2 0 0 0 451.8 728.8L313.4 801.5 339.8 647.7A103.7 103.7 0 0 0 310 555.4L197.7 446.2 352.6 423.7A104 104 0 0 0 430.8 366.2L500 225.7M500 139.8A41.7 41.7 0 0 0 461.5 163.4L375.5 338.5A42.2 42.2 0 0 1 343.7 361.5L150 390.2A42.2 42.2 0 0 0 126.6 461.5L266.8 598.2A42.2 42.2 0 0 1 278.9 635.5L246.2 829.1A42.3 42.3 0 0 0 287.8 878.5 41.8 41.8 0 0 0 307.7 873.5L480.9 782.5A41.8 41.8 0 0 1 520.3 782.5L692.3 873.5A41.8 41.8 0 0 0 711.8 878.5 42.3 42.3 0 0 0 753.8 829.1L721.1 636.2A42.2 42.2 0 0 1 733.2 598.8L873.4 461.5A42.2 42.2 0 0 0 850 389.5L656.3 362A42.2 42.2 0 0 1 624.5 338.5L538.5 163.4A41.7 41.7 0 0 0 500 139.8Z",
+        "width": 1000
+      },
+      "search": [
+        "star-outline"
+      ]
     }
   ]
 }
