--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "spinners-react": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
