--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-adsense": "^0.0.5",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
