Update AdSense configuration in env.template and index.html
- Changed the AdSense client ID to a specific value.
- Updated instructions for Ad Slot IDs to clarify the need for creating ad units in the AdSense dashboard.

--- a/env.template
+++ b/env.template
@@ -6,11 +6,14 @@ REACT_APP_TMDB_API_KEY=your_tmdb_api_key_here
 # Google AdSense Configuration (Optional)
 # Get your AdSense details from https://www.google.com/adsense/
 # Client ID format: ca-pub-xxxxxxxxxxxxxxxx
-REACT_APP_ADSENSE_CLIENT_ID=ca-pub-xxxxxxxxxxxxxxxxx
+REACT_APP_ADSENSE_CLIENT_ID=ca-pub-6431549888769819
 
-# Ad Slot IDs (get these from your AdSense account)
-REACT_APP_ADSENSE_SLOT_SIDEBAR=xxxxxxxxxx
-REACT_APP_ADSENSE_SLOT_BOTTOM=xxxxxxxxxx
+# Ad Slot IDs (get these from your AdSense account after creating ad units)
+# You need to create two ad units in your AdSense dashboard:
+# 1. Sidebar ad (300x600 or responsive)
+# 2. Bottom ad (728x90 or responsive)
+REACT_APP_ADSENSE_SLOT_SIDEBAR=your_sidebar_ad_slot_id
+REACT_APP_ADSENSE_SLOT_BOTTOM=your_bottom_ad_slot_id
 
 # Instructions:
 # 1. Copy this file to .env in the root directory
