--- a/env.template
+++ b/env.template
@@ -5,15 +5,10 @@ REACT_APP_TMDB_API_KEY=your_tmdb_api_key_here
 
 # Google AdSense Configuration (Optional)
 # Get your AdSense details from https://www.google.com/adsense/
-# Client ID format: ca-pub-xxxxxxxxxxxxxxxx
-REACT_APP_ADSENSE_CLIENT_ID=ca-pub-6431549888769819
-
-# Ad Slot IDs (get these from your AdSense account after creating ad units)
-# You need to create two ad units in your AdSense dashboard:
-# 1. Sidebar ad (300x600 or responsive)
-# 2. Bottom ad (728x90 or responsive)
-REACT_APP_ADSENSE_SLOT_SIDEBAR=your_sidebar_ad_slot_id
-REACT_APP_ADSENSE_SLOT_BOTTOM=your_bottom_ad_slot_id
+# Client ID: ca-pub-6431549888769819
+# Ad Slot ID: 8622455036 (Muvi - Auto responsive ad)
+# The AdSense script is already configured in public/index.html
+# Ad slots are configured directly in the AdSense component
 
 # Instructions:
 # 1. Copy this file to .env in the root directory
