Add SEO rendering solution documentation and enhance meta tags for improved search engine visibility
- Introduced a comprehensive SEO rendering solution document outlining issues with Googlebot rendering React SPAs and proposed improvements.
- Enhanced `public/index.html` with optimized meta tags for better indexing and visibility.
- Updated `vercel.json` to include `X-Robots-Tag` and improved caching strategies for better performance.

--- a/vercel.json
+++ b/vercel.json
@@ -28,6 +28,19 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "X-Robots-Tag",
+          "value": "index, follow"
+        }
+      ]
+    },
+    {
+      "source": "/",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, must-revalidate"
         }
       ]
     },
