Add ads.txt file and update Vercel configuration for AdSense integration
- Introduced a new ads.txt file to comply with advertising standards.
- Updated Vercel configuration to serve ads.txt with appropriate headers for caching.
- Added Google AdSense account meta tag in index.html for enhanced ad management.

--- a/vercel.json
+++ b/vercel.json
@@ -71,6 +71,19 @@
       ]
     },
     {
+      "source": "/ads.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400, must-revalidate"
+        }
+      ]
+    },
+    {
       "source": "/static/(.*)",
       "headers": [
         {
